# PeakRDL-python

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  generate_and_test.py  generate_testcases.py  pyproject.toml  setup.py
.github/workflows/: action.yaml
docs/: .readthedocs.yaml  api.rst  api_components.rst  command_line.rst  conf.py  customisation.rst  design_decisions.rst  design_tools.rst  generated_package.rst  index.rst  installation.rst  requirements.txt
docs/generated_package/: callbacks.rst  output_structure.rst  using_ral.rst
docs/source/: api.rst  conf.py  generated_package.rst  index.rst
example/: chip_with_a_GPIO.rdl  flashing_the_LED.py
example/array_access/: array_access.py  array_access.rdl  demo_array_access.py
example/enumerated_fields/: demo_enumerated_fields.py  enumerated_fields.rdl
example/mychip/reg_model/: mychip.py
example/mychip/tests/: test_mychip.py
example/optimised_access/: demo_optimised_access.py  demo_optimised_array_access.py  optimised_access.py  optimised_access.rdl  optimised_array_access.rdl
example/overridden_names/: demo_over_ridden_names.py  over_ridden_names.py  overridden_names.rdl
example/simulating_callbacks/: chip_with_a_GPIO.rdl  flashing_the_LED.py
example/tranversing_address_map/: chip_with_registers.rdl  dumping_register_state_to_json_file.py  reg_dump.json  reseting_registers.py  writing_register_state_from_json_file.py
example/user_defined_properties/: demo_user_defined_properties.py  user_defined_properties.rdl
example/why_ral/: gpio.rdl  hardware_sim.py  with_hal.py  with_ral.py  without_ral.py
peakrdl/python/: __about__.py  __init__.py  exporter.py  peakpython.py  systemrdl_node_utility_functions.py
peakrdl/python/templates/: addrmap.py.jinja  addrmap_field.py.jinja  addrmap_memory.py.jinja  addrmap_register.py.jinga  addrmap_register.py.jinja  addrmap_tb.py.jinja  peakrdl_python_types.py
src/: __init__.py  exporter.py
src/peakrdl/python/: __about__.py  __init__.py
src/peakrdl_python/: __about__.py  __init__.py  __peakrdl__.py  _deploy_package.py  _node_walkers.py  class_names.py  compiler_udp.py  exporter.py  peakpython.py  python_jinja_extensions.py  safe_name_utility.py  systemrdl_node_hashes.py  systemrdl_node_utility_functions.py  unique_component_iterator.py
src/peakrdl_python/lib/: __init__.py  async_memory.py  base.py  (+12 more)
tests/: .mypy.ini  addr_map.rdl  basic.rdl  pylint.rc  test_backward_compatibility.py  test_check_examples.py
tests/alternative_templates/: header.py.jinja
tests/alternative_templates_dynamic/: header.py.jinja  header_tb.py.jinja
tests/alternative_templates_dynamic_toml/: header_check.py  peakrdl.toml
tests/alternative_templates_toml/: header_check.py  peakrdl.toml
tests/pathological_register_maps/: pathalogical_rdl_builder.py  pathological_rdl_builder.py
tests/testcases/: addr_map.rdl  aliases.rdl  all_register_access_types.rdl  basic.rdl  block_a.xml  block_b.xml  bug_81.rdl  counter_properties.rdl  deduplicated_field.rdl  different_array_types.rdl  enum_example.rdl  example_issue_106.rdl  extended_memories.rdl  extended_sizes_registers_array.rdl  field_with_overridden_reset.rdl  fields_with_HW_write.rdl  fields_with_reset_values.rdl  heterogeneous_array.rdl  hidden_fields.rdl  hidden_property.rdl  large_field_combinations.rdl  memories_with_registers.rdl  multi_block.rdl  multifile.rdl  name_clash.rdl  name_desc_all_levels.rdl  name_desc_option_deduplicate.rdl  name_desc_stress_test.rdl  name_description_test.rdl  overlapping_registers_and_fields.rdl  overridden_python_name.rdl  parametrised_top.rdl  reg_name_stress.rdl  regfile_and_arrays.rdl  reserved_elements.rdl  same_but_different_enum.rdl  shared_register_issue_202  signals_definitions_at_various_levels.rdl  simple.rdl  simulator_test.rdl  (+5 more)
tests/unit_tests/: __init__.py  simple_components.py  test_array_indexing.py  test_building_inner_addrmap.py  test_export.py  test_field.py  test_name_desc_export.py  test_optimised_reg_array.py  test_reg.py  test_sim.py  test_sim_overlapping_callbacks.py  test_system_rdl_enum.py
workflow/: action.yaml
(+59 files in other folders)
