[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-python"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "systemrdl-compiler>=1.24.0",
    "jinja2",
    "asynctest;python_version<'3.8'",
    "typing-extensions;python_version<'3.11'"
]

authors = [
    {name="Keith Brady"},
]
description = "Generate Python Register Access Layer (RAL) from SystemRDL"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "Python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Source = "https://github.com/krcb197/PeakRDL-python"
Tracker = "https://github.com/krcb197/PeakRDL-python/issues"
Documentation = "https://peakrdl-python.readthedocs.io/"
Changelog = "https://github.com/krcb197/PeakRDL-python/releases"

[tool.setuptools.dynamic]
version = {attr = "peakrdl_python.__about__.__version__"}

[tool.setuptools.package-data]
"peakrdl_python.templates" = ["*.py.jinga"]

[project.entry-points."peakrdl.exporters"]
python = "peakrdl_python.__peakrdl__:Exporter"

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "coverage",
    "peakrdl-ipxact"
]
peakrdl = ["peakrdl"]
