[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-python"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "systemrdl-compiler>=1.28.0",
    "jinja2",
    "typing-extensions;python_version<'3.11'"
]

authors = [
    {name="Keith Brady"},
]
description = "Generate Python Register Access Layer (RAL) from SystemRDL"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "Python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Source = "https://github.com/krcb197/PeakRDL-python"
Tracker = "https://github.com/krcb197/PeakRDL-python/issues"
Documentation = "https://peakrdl-python.readthedocs.io/"
Changelog = "https://github.com/krcb197/PeakRDL-python/releases"

[tool.setuptools.dynamic]
version = {attr = "peakrdl_python.__about__.__version__"}

[tool.setuptools.package-data]
"peakrdl_python.templates" = ["*.py.jinga"]

[project.entry-points."peakrdl.exporters"]
python = "peakrdl_python.__peakrdl__:Exporter"

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "coverage",
    "peakrdl-ipxact"
]
peakrdl = [
    "peakrdl"
]
unit_test = [
    "peakrdl",
    "tomli;python_version<'3.11'"
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
disallow_untyped_calls=true
disallow_untyped_defs=true
